# botland

./: .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt
cmake/: cxx-setup.cmake  sys-detect.cmake  toolchain.cmake
data/: .gitattributes
game/: CMakeLists.txt  backend.cpp  backend.hpp  bvh.cpp  bvh.hpp  bvh.inl  collision.cpp  collision.hpp  geo.cpp  geo.hpp  headless.cpp  img-import.cpp  import-img.cpp  import-obj.cpp  import-obj.hpp  import-stl.cpp  import-stl.hpp  import.cpp  import.hpp  physics.cpp  physics.hpp  physics_narrowphase.cpp  physics_obj.hpp  physics_store.hpp  physics_store.inl  prims.cpp  prims.hpp  render.cpp  render.hpp  sim.cpp  sim.hpp  sim.inl  sim_cpu.cpp  sim_impl.hpp
gas/: .gitignore  CMakeLists.txt  backend_common.hpp  gas.cpp  gas.hpp  gas.inl  gas_fwd.hpp  gas_imgui.cpp  gas_imgui.hpp  gas_input.cpp  gas_input.hpp  gas_input.inl  gas_ui.cpp  gas_ui.hpp  gas_ui.inl  linux.hpp  mem.cpp  mem.hpp  shader_compiler.cpp  shader_compiler.hpp  shader_compiler.inl  shader_compiler_frontend.cpp  uuid.hpp  wgpu.cpp  wgpu.hpp  wgpu_init.hpp  wgpu_shader_compiler.cpp  wgpu_shader_compiler.hpp  windows.hpp
gas/cmake/: gas-find-deps.cmake  gas-shader-compile.cmake
gas/test/: CMakeLists.txt  gas_table.cpp  gpu_tmp_input.cpp  swapchain.cpp  test_gpu.hpp  test_gpu_main.cpp  uuid.cpp
net/: CMakeLists.txt  comm.hpp  socket.cpp  socket.hpp
rt/: CMakeLists.txt  cuda_cc.cpp  cuda_cfg.hpp  cuda_comm.hpp  cuda_comm.inl  cuda_mgr.cpp  cuda_mgr.hpp  cuda_mgr.inl  cuda_utils.cpp  cuda_utils.hpp  cuda_utils.inl  dyn_array.hpp  err.cpp  err.hpp  err.inl  fwd.hpp  global_alloc.cpp  global_alloc.hpp  gpu_alloc.cpp  gpu_prims.hpp  host_print.cpp  host_print.hpp  host_print.inl  io.cpp  io.hpp  job.hpp  log.hpp  log.inl  macros.hpp  math.hpp  math.inl  opnewdel.cpp  os.cpp  os.hpp  rand.cpp  rand.hpp  rand.inl  rt.cpp  rt.hpp  rt.inl  (+18 more)
scene/: CMakeLists.txt  geo.inl  gjk.hpp  gltf.cpp  gltf.hpp  import.cpp  import.hpp  json.cpp  json.hpp  obj.cpp  obj.hpp  render.hpp  scene.cpp  scene.hpp  scene.inl  stl.cpp  urdf.cpp  urdf.hpp
viz/: CMakeLists.txt  Shader.md  board.slang  font.cpp  font.hpp  generic_location_effect.slang  healthbar.slang  name.slang  native_frontend.cpp  objects.slang  shader_host.hpp  shader_host.slang  text.slang  tonemap.slang  units.slang  utils.slang  viz.cpp  viz.hpp  viz.inl  web.cpp
web/: index.html
